--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "name": "electron-dir-files",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
     "start": "electron ./demo/main.js",
-    "i": "npm install && npm install electron --no-package-lock"
+    "i": "npm install && npm install electron --no-package-lock --no-save",
+    "build": "rollup -c"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^1.7.10",
     "mime-types": "^2.1.17"
   },
   "peerDependencies": {
-    "electron": "~1.7.10"
+    "electron": "~1.7.11"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
+    "rollup": "^0.55.0",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^8.2.6"
   }
 }
